[gd_scene load_steps=7 format=3 uid="uid://dvhdq5d7btyls"]

[ext_resource type="Texture2D" uid="uid://b5peuvvov7o0c" path="res://tiles/world1-10/enemigoPuerco.png" id="1_kd1c5"]
[ext_resource type="Script" path="res://scripts/enemysWord1to10/enemigo_puerco.gd" id="1_pshcm"]

[sub_resource type="Animation" id="Animation_lidmy"]
resource_name = "corre"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemigoPuerco:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_p77xb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemigoPuerco:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_18jy3"]
_data = {
"RESET": SubResource("Animation_p77xb"),
"corre": SubResource("Animation_lidmy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8jbx"]
size = Vector2(51, 32)

[node name="enemigoPuerco" type="Area2D"]
script = ExtResource("1_pshcm")

[node name="EnemigoPuerco" type="Sprite2D" parent="."]
position = Vector2(139.375, 38)
scale = Vector2(0.480657, 0.466102)
texture = ExtResource("1_kd1c5")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_18jy3")
}
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(145.5, 20)
shape = SubResource("RectangleShape2D_p8jbx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
